<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:id="@+id/trythis">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="Select Criteria"
        android:background="@color/colorBrown"
        android:textColor="@color/colorWhite"
        android:id="@+id/textView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verticalScrollView"
        android:layout_below="@+id/textView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox1"
                android:id="@+id/checkBox1"
                android:button="@android:drawable/btn_star"
                android:background="@color/colorLightGray"
                android:onClick="selectButton"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox2"
                android:id="@+id/checkBox2"
                android:layout_below="@+id/checkBox1"
                android:button="@android:drawable/btn_star"
                android:background="@color/colorLightGray"
                android:onClick="selectButton"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox3"
                android:id="@+id/checkBox3"
                android:layout_below="@+id/checkBox2"
                android:button="@android:drawable/btn_star"
                android:background="@color/colorLightGray"

                android:onClick="selectButton"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox4"
                android:id="@+id/checkBox4"
                android:layout_below="@+id/checkBox3"
                android:button="@android:drawable/btn_star"
                android:background="@color/colorLightGray"
                android:onClick="selectButton"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="50dp"
                android:layout_height="wrap_content">


                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox5"
                    android:id="@+id/checkBox5"
                    android:layout_below="@+id/checkBox4"
                    android:button="@android:drawable/btn_star"
                    android:onClick="selectButton"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox6"
                    android:id="@+id/checkBox6"
                    android:layout_below="@+id/checkBox5"
                    android:button="@android:drawable/btn_star"
                    android:onClick="selectButton"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox7"
                    android:id="@+id/checkBox7"
                    android:layout_below="@+id/checkBox6"
                    android:button="@android:drawable/btn_star"
                    android:onClick="selectButton"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox8"
                    android:id="@+id/checkBox8"
                    android:layout_below="@+id/checkBox7"
                    android:button="@android:drawable/btn_star"
                    android:onClick="selectButton"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox9"
                    android:id="@+id/checkBox9"
                    android:layout_below="@+id/checkBox8"
                    android:button="@android:drawable/btn_star"
                    android:onClick="selectButton"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox10"
                    android:id="@+id/checkBox10"
                    android:layout_below="@+id/checkBox9"
                    android:button="@android:drawable/btn_star"
                    android:onClick="selectButton"/>
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/criteria_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:backgroundTint="@color/colorOrange"
                android:src="@android:drawable/ic_media_play" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>